fix: calc result overlaps with input text when the latter is very long
close #4147

--- a/src/main/frontend/extensions/code.css
+++ b/src/main/frontend/extensions/code.css
@@ -21,24 +21,13 @@
   }
 
   &-calc {
-    @apply absolute right-0 text-sm;
+    @apply text-sm;
     padding: 0 0.25em;
-    margin-top: 24px;
-    top: 3px;
-    z-index: 1;
-    background: transparent;
     width: max-content;
     text-align: right;
 
     &-output-line {
-      height: 23px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-
-      > span {
-          font-family: Fira Code, Monaco, Menlo, Consolas, 'COURIER NEW', monospace;
-      }
+      word-break: normal;
     }
   }
 
